[package]
name = "api_test_expose"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
